worked on ball